--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,6 +63,9 @@ body {
   border-radius: 1.125rem;
   margin-bottom: 1.5rem;
 }
+a.cube-link:hover {
+  color: var(--cyan);
+}
 
 .title {
   color: var(--white);
@@ -70,6 +73,10 @@ body {
   font-weight: 400;
   margin: 0.5rem 0;
   align-self: flex-start;
+}
+
+a.title:hover {
+  color: var(--cyan);
 }
 
 .detail {
@@ -105,8 +112,7 @@ hr {
 }
 
 .creator {
-  display: flex;
-  align-items: center;
+  align-self: flex-start;
   gap: 0.75rem;
 }
 
@@ -116,9 +122,16 @@ hr {
   border-radius: 50%;
 }
 
+.creator p {
+  color: var(--soft-blue);
+}
+
 .creator-name {
   color: var(--white);
-  font-weight: bold;
+  font-weight: 200;
+}
+a.creator-name:hover {
+  color: var(--cyan);
 }
 
 .flex {
@@ -131,5 +144,16 @@ span > img {
   height: 1rem;
 }
 
-.attribution { font-size: 11px; text-align: center; }
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
 .attribution a { color: hsl(228, 45%, 44%); }
