--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,14 +57,49 @@ body {
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
 }
 
+.cube-link {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .cube {
   width: 100%;
-  height: auto;
   border-radius: 1.125rem;
   margin-bottom: 1.5rem;
+  opacity: 1;
+  display: block;
+  transition: opacity 0.5s ease;
+  backface-visibility: hidden;
 }
-a.cube-link:hover {
-  color: var(--cyan);
+
+.middle {
+  position: absolute;
+  top: 0;
+  bottom: 25px;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+  background-color: #00fff769;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1.125rem;
+}
+
+.view {
+  width: 4rem;
+  height: auto;
+}
+
+.cube-link:hover .cube {
+  opacity: 0.3;
+}
+
+.cube-link:hover .middle {
+  opacity: 1;
 }
 
 .title {
